@@ -21,25 +21,31 @@ package org.apache.druid.segment.incremental;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import nl.jqno.equalsverifier.EqualsVerifier;
+import org.apache.druid.data.input.MapBasedInputRow;
 import org.apache.druid.data.input.impl.AggregateProjectionSpec;
 import org.apache.druid.data.input.impl.DimensionsSpec;
 import org.apache.druid.data.input.impl.DoubleDimensionSchema;
 import org.apache.druid.data.input.impl.LongDimensionSchema;
 import org.apache.druid.data.input.impl.StringDimensionSchema;
 import org.apache.druid.error.DruidException;
+import org.apache.druid.java.util.common.DateTimes;
+import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.query.aggregation.AggregatorFactory;
 import org.apache.druid.query.aggregation.DoubleSumAggregatorFactory;
 import org.apache.druid.query.aggregation.LongSumAggregatorFactory;
 import org.apache.druid.query.expression.TestExprMacroTable;
 import org.apache.druid.segment.IndexBuilder;
 import org.apache.druid.segment.TestHelper;
-import org.apache.druid.segment.VirtualColumns;
 import org.apache.druid.segment.column.ColumnType;
 import org.apache.druid.segment.virtual.ExpressionVirtualColumn;
+import org.joda.time.DateTime;
 import org.junit.Assert;
 import org.junit.Test;
+
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 public class OnheapIncrementalIndexTest
 {
@@ -50,6 +56,64 @@ public class OnheapIncrementalIndexTest
   {
     OnheapIncrementalIndex.Spec spec = new OnheapIncrementalIndex.Spec(true);
     Assert.assertEquals(spec, MAPPER.readValue(MAPPER.writeValueAsString(spec), OnheapIncrementalIndex.Spec.class));
+  }
+
+  @Test
+  public void testProjectionHappyPath()
+  {
+    DimensionsSpec dimensionsSpec = DimensionsSpec.builder()
+                                                  .setDimensions(List.of(
+                                                      new StringDimensionSchema("string"),
+                                                      new LongDimensionSchema("long")
+                                                  ))
+                                                  .build();
+    AggregatorFactory aggregatorFactory = new DoubleSumAggregatorFactory("double", "double");
+    AggregateProjectionSpec projectionSpec =
+        AggregateProjectionSpec.builder("proj")
+                               .groupingColumns(new StringDimensionSchema("string"))
+                               .aggregators(
+                                   new LongSumAggregatorFactory("sum_long", "long"),
+                                   new DoubleSumAggregatorFactory("double", "double")
+                               )
+                               .build();
+
+    IncrementalIndex index = IndexBuilder.create()
+                                         .schema(IncrementalIndexSchema.builder()
+                                                                       .withDimensionsSpec(dimensionsSpec)
+                                                                       .withRollup(true)
+                                                                       .withMetrics(aggregatorFactory)
+                                                                       .withProjections(List.of(projectionSpec))
+                                                                       .build())
+                                         .buildIncrementalIndex();
+    Assert.assertNotNull(index.getProjection("proj"));
+  }
+
+  @Test
+  public void testProjectionDuplicatedName()
+  {
+    // arrange
+    DimensionsSpec dimensionsSpec = DimensionsSpec.EMPTY;
+    AggregatorFactory aggregatorFactory = new DoubleSumAggregatorFactory("double", "double");
+    AggregateProjectionSpec.Builder bob = new AggregateProjectionSpec.Builder().aggregators(aggregatorFactory);
+    // act & assert
+    DruidException e = Assert.assertThrows(
+        DruidException.class,
+        () -> IndexBuilder.create()
+                          .schema(IncrementalIndexSchema.builder()
+                                                        .withDimensionsSpec(dimensionsSpec)
+                                                        .withRollup(true)
+                                                        .withMetrics(aggregatorFactory)
+                                                        .withProjections(
+                                                            List.of(
+                                                                bob.name("proj").build(),
+                                                                bob.name("proj").build()
+                                                            )
+                                                        )
+                                                        .build())
+                          .buildIncrementalIndex()
+    );
+    Assert.assertEquals(DruidException.Category.DEFENSIVE, e.getCategory());
+    Assert.assertEquals("duplicate projection[proj]", e.getMessage());
   }
 
   @Test
@@ -72,7 +136,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -80,15 +144,10 @@ public class OnheapIncrementalIndexTest
                                                                     .build()
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "mismatched dims",
-                                                              VirtualColumns.EMPTY,
-                                                              ImmutableList.of(
-                                                                  new LongDimensionSchema("string")
-                                                              ),
-                                                              null
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("mismatched dims")
+                                                                                 .groupingColumns(new LongDimensionSchema("string"))
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -112,7 +171,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -120,23 +179,21 @@ public class OnheapIncrementalIndexTest
                                                                     .build()
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "sad grouping column",
-                                                              VirtualColumns.create(
-                                                                  new ExpressionVirtualColumn(
-                                                                      "v0",
-                                                                      "cast(long, 'double')",
-                                                                      ColumnType.DOUBLE,
-                                                                      TestExprMacroTable.INSTANCE
-                                                                  )
-                                                              ),
-                                                              ImmutableList.of(
-                                                                  new DoubleDimensionSchema("v0"),
-                                                                  new StringDimensionSchema("missing")
-                                                              ),
-                                                              null
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("sad grouping column")
+                                                                                 .virtualColumns(
+                                                                                     new ExpressionVirtualColumn(
+                                                                                         "v0",
+                                                                                         "cast(long, 'double')",
+                                                                                         ColumnType.DOUBLE,
+                                                                                         TestExprMacroTable.INSTANCE
+                                                                                     )
+                                                                                 )
+                                                                                 .groupingColumns(
+                                                                                     new DoubleDimensionSchema("v0"),
+                                                                                     new StringDimensionSchema("missing")
+                                                                                 )
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -160,7 +217,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -168,22 +225,20 @@ public class OnheapIncrementalIndexTest
                                                                     .build()
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "sad virtual column",
-                                                              VirtualColumns.create(
-                                                                  new ExpressionVirtualColumn(
-                                                                      "v0",
-                                                                      "double",
-                                                                      ColumnType.DOUBLE,
-                                                                      TestExprMacroTable.INSTANCE
-                                                                  )
-                                                              ),
-                                                              ImmutableList.of(
-                                                                  new LongDimensionSchema("long")
-                                                              ),
-                                                              null
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("sad virtual column")
+                                                                                 .virtualColumns(
+                                                                                     new ExpressionVirtualColumn(
+                                                                                         "v0",
+                                                                                         "double",
+                                                                                         ColumnType.DOUBLE,
+                                                                                         TestExprMacroTable.INSTANCE
+                                                                                     )
+                                                                                 )
+                                                                                 .groupingColumns(
+                                                                                     new LongDimensionSchema("long")
+                                                                                 )
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -207,7 +262,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -219,17 +274,17 @@ public class OnheapIncrementalIndexTest
                                                       new DoubleSumAggregatorFactory("sum_double", "sum_double")
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "mismatched agg",
-                                                              VirtualColumns.EMPTY,
-                                                              ImmutableList.of(
-                                                                  new StringDimensionSchema("string")
-                                                              ),
-                                                              new AggregatorFactory[] {
-                                                                  new LongSumAggregatorFactory("sum_double", "sum_double")
-                                                              }
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("mismatched agg")
+                                                                                 .groupingColumns(new StringDimensionSchema(
+                                                                                     "string"))
+                                                                                 .aggregators(
+                                                                                     new LongSumAggregatorFactory(
+                                                                                         "sum_double",
+                                                                                         "sum_double"
+                                                                                     )
+                                                                                 )
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -253,7 +308,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -265,18 +320,21 @@ public class OnheapIncrementalIndexTest
                                                       new DoubleSumAggregatorFactory("double", "double")
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "renamed agg",
-                                                              VirtualColumns.EMPTY,
-                                                              ImmutableList.of(
-                                                                  new StringDimensionSchema("string")
-                                                              ),
-                                                              new AggregatorFactory[] {
-                                                                  new LongSumAggregatorFactory("sum_long", "long"),
-                                                                  new DoubleSumAggregatorFactory("sum_double", "double")
-                                                              }
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("renamed agg")
+                                                                                 .groupingColumns(new StringDimensionSchema(
+                                                                                     "string"))
+                                                                                 .aggregators(
+                                                                                     new LongSumAggregatorFactory(
+                                                                                         "sum_long",
+                                                                                         "long"
+                                                                                     ),
+                                                                                     new DoubleSumAggregatorFactory(
+                                                                                         "sum_double",
+                                                                                         "double"
+                                                                                     )
+                                                                                 )
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -300,7 +358,7 @@ public class OnheapIncrementalIndexTest
                                                   .withDimensionsSpec(
                                                       DimensionsSpec.builder()
                                                                     .setDimensions(
-                                                                        ImmutableList.of(
+                                                                        List.of(
                                                                             new StringDimensionSchema("string"),
                                                                             new LongDimensionSchema("long")
                                                                         )
@@ -308,24 +366,26 @@ public class OnheapIncrementalIndexTest
                                                                     .build()
                                                   )
                                                   .withProjections(
-                                                      ImmutableList.of(
-                                                          new AggregateProjectionSpec(
-                                                              "sad agg virtual column",
-                                                              VirtualColumns.create(
-                                                                  new ExpressionVirtualColumn(
-                                                                      "v0",
-                                                                      "long + 100",
-                                                                      ColumnType.LONG,
-                                                                      TestExprMacroTable.INSTANCE
-                                                                  )
-                                                              ),
-                                                              ImmutableList.of(
-                                                                  new LongDimensionSchema("long")
-                                                              ),
-                                                              new AggregatorFactory[] {
-                                                                  new LongSumAggregatorFactory("v0_sum", "v0")
-                                                              }
-                                                          )
+                                                      List.of(
+                                                          AggregateProjectionSpec.builder("sad agg virtual column")
+                                                                                 .virtualColumns(
+                                                                                     new ExpressionVirtualColumn(
+                                                                                         "v0",
+                                                                                         "long + 100",
+                                                                                         ColumnType.LONG,
+                                                                                         TestExprMacroTable.INSTANCE
+                                                                                     )
+                                                                                 )
+                                                                                 .groupingColumns(
+                                                                                     new LongDimensionSchema("long")
+                                                                                 )
+                                                                                 .aggregators(
+                                                                                     new LongSumAggregatorFactory(
+                                                                                         "v0_sum",
+                                                                                         "v0"
+                                                                                     )
+                                                                                 )
+                                                                                 .build()
                                                       )
                                                   )
                                                   .build()
@@ -333,6 +393,118 @@ public class OnheapIncrementalIndexTest
     );
     Assert.assertEquals(
         "projection[sad agg virtual column] contains aggregator[v0_sum] that is has required field[v0] which is a virtual column, this is not yet supported",
+        t.getMessage()
+    );
+  }
+
+
+  @Test
+  public void testTimestampOutOfRange()
+  {
+    // arrange
+    DimensionsSpec dimensionsSpec = DimensionsSpec.builder()
+                                                  .setDimensions(List.of(
+                                                      new StringDimensionSchema("string"),
+                                                      new LongDimensionSchema("long")
+                                                  ))
+                                                  .build();
+    AggregatorFactory aggregatorFactory = new DoubleSumAggregatorFactory("double", "double");
+    AggregateProjectionSpec projectionSpec =
+        AggregateProjectionSpec.builder("proj")
+                               .groupingColumns(new StringDimensionSchema("string"))
+                               .aggregators(
+                                   new LongSumAggregatorFactory("sum_long", "long"),
+                                   new DoubleSumAggregatorFactory("double", "double")
+                               )
+                               .build();
+
+    final DateTime minTimestamp = DateTimes.nowUtc();
+    final DateTime outOfRangeTimestamp = DateTimes.nowUtc().minusDays(1);
+    final DateTime outOfRangeProjectionTimestamp = Granularities.YEAR.bucketStart(outOfRangeTimestamp);
+
+    final IncrementalIndex index = IndexBuilder.create()
+                                               .schema(IncrementalIndexSchema.builder()
+                                                                             .withDimensionsSpec(dimensionsSpec)
+                                                                             .withRollup(true)
+                                                                             .withMetrics(aggregatorFactory)
+                                                                             .withProjections(List.of(projectionSpec))
+                                                                             .withMinTimestamp(minTimestamp.getMillis())
+                                                                             .build())
+                                               .buildIncrementalIndex();
+
+    IncrementalIndexAddResult addResult = index.add(
+        new MapBasedInputRow(
+            minTimestamp,
+            List.of("string", "long"),
+            Map.of(
+                "string", "hello",
+                "long", 10L
+            )
+        )
+    );
+    Assert.assertTrue(addResult.isRowAdded());
+
+    final Map<String, Object> rowMap = new LinkedHashMap<>();
+    rowMap.put("string", "hello");
+    rowMap.put("long", 10L);
+
+    Throwable t = Assert.assertThrows(
+        DruidException.class,
+        () -> index.add(
+            new MapBasedInputRow(
+                outOfRangeTimestamp.getMillis(),
+                List.of("string", "long"),
+                rowMap
+            )
+        )
+    );
+
+    Assert.assertEquals(
+        "Cannot add row[{timestamp="
+        + outOfRangeTimestamp
+        + ", event={string=hello, long=10}, dimensions=[string, long]}] because it is below the minTimestamp["
+        + minTimestamp
+        + "]",
+        t.getMessage()
+    );
+
+    AggregateProjectionSpec projectionSpecYear =
+        AggregateProjectionSpec.builder("proj")
+                               .virtualColumns(Granularities.toVirtualColumn(Granularities.YEAR, "g"))
+                               .groupingColumns(new StringDimensionSchema("string"), new LongDimensionSchema("g"))
+                               .aggregators(
+                                   new LongSumAggregatorFactory("sum_long", "long"),
+                                   new DoubleSumAggregatorFactory("double", "double")
+                               )
+                               .build();
+    IncrementalIndex index2 = IndexBuilder.create()
+                                          .schema(IncrementalIndexSchema.builder()
+                                                                        .withDimensionsSpec(dimensionsSpec)
+                                                                        .withRollup(true)
+                                                                        .withMetrics(aggregatorFactory)
+                                                                        .withProjections(List.of(projectionSpecYear))
+                                                                        .withMinTimestamp(minTimestamp.getMillis())
+                                                                        .build())
+                                          .buildIncrementalIndex();
+
+    t = Assert.assertThrows(
+        DruidException.class,
+        () -> index2.add(
+            new MapBasedInputRow(
+                minTimestamp,
+                List.of("string", "long"),
+                rowMap
+            )
+        )
+    );
+
+    Assert.assertEquals(
+        "Cannot add row[{timestamp="
+        + minTimestamp
+        + ", event={string=hello, long=10}, dimensions=[string, long]}] to projection[proj] because projection effective timestamp["
+        + outOfRangeProjectionTimestamp
+        + "] is below the minTimestamp["
+        + minTimestamp + "]",
         t.getMessage()
     );
   }
